--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ deps = -rrequirements-dev.txt
 commands =
     coverage erase
     coverage run -m pytest {posargs:tests}
-    coverage report --show-missing --fail-under 100
+    coverage report --fail-under 100
     pre-commit install -f --install-hooks
     pre-commit run --all-files
 
