Migrate setup.py to setup.cfg declarative metadata
Committed via https://github.com/asottile/all-repos

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,37 @@
+[metadata]
+name = all_repos
+version = 1.10.0
+description = Clone all your repositories and apply sweeping changes.
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/asottile/all-repos
+author = Anthony Sottile
+author_email = asottile@umich.edu
+license = MIT
+license_file = LICENSE
+classifiers =
+    License :: OSI Approved :: MIT License
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
+
+[options]
+packages = find:
+install_requires = identify
+
+[options.entry_points]
+console_scripts =
+    all-repos-clone=all_repos.clone:main
+    all-repos-complete=all_repos.complete:main
+    all-repos-find-files=all_repos.find_files:main
+    all-repos-grep=all_repos.grep:main
+    all-repos-list-repos=all_repos.list_repos:main
+    all-repos-manual=all_repos.manual:main
+    all-repos-sed=all_repos.sed:main
+
+[options.packages.find]
+exclude =
+    tests*
+    testing*
+
 [bdist_wheel]
 universal = True
