--- a/setup.cfg
+++ b/setup.cfg
@@ -12,11 +12,14 @@ license_file = LICENSE
 classifiers =
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
 
 [options]
 packages = find:
 install_requires = identify
+python_requires = >=3.6
 
 [options.entry_points]
 console_scripts =
