--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,8 @@ ignore = E265,E501,W504
 
 [pytest]
 env =
+    # ensure git output is english
+    LANG=C.UTF-8
     GIT_AUTHOR_NAME=test
     GIT_COMMITTER_NAME=test
     GIT_AUTHOR_EMAIL=test@example.com
