--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36
+envlist = py36,py37,pre-commit
 
 [testenv]
 deps = -rrequirements-dev.txt
@@ -7,8 +7,12 @@ commands =
     coverage erase
     coverage run -m pytest {posargs:tests}
     coverage report --fail-under 100
-    pre-commit install -f --install-hooks
-    pre-commit run --all-files
+    pre-commit install
+
+[testenv:pre-commit]
+skip_install = true
+deps = pre-commit
+commands = pre-commit run --all-files --show-diff-on-failure
 
 [pep8]
 ignore = E265,E501,W504
