Update azure-pipelines template repositories
Committed via https://github.com/asottile/all-repos

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,10 +15,12 @@ classifiers =
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
 
 [options]
 packages = find:
-install_requires = identify
+install_requires =
+    identify
 python_requires = >=3.6
 
 [options.entry_points]
