--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.4.0
+    rev: v2.5.0
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
@@ -14,6 +14,7 @@ repos:
     rev: 3.7.9
     hooks:
     -   id: flake8
+        additional_dependencies: [flake8-typing-imports==1.7.0]
 -   repo: https://github.com/pre-commit/mirrors-autopep8
     rev: v1.5
     hooks:
@@ -29,11 +30,7 @@ repos:
     -   id: add-trailing-comma
         args: [--py36-plus]
 -   repo: https://github.com/asottile/pyupgrade
-    rev: v1.26.2
+    rev: v2.1.0
     hooks:
     -   id: pyupgrade
         args: [--py36-plus]
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.761
-    hooks:
-    -   id: mypy
