reorder pre-commit config
Committed via https://github.com/asottile/all-repos

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,12 +15,20 @@ classifiers =
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: Implementation :: CPython
 
 [options]
 packages = find:
 install_requires =
     identify
 python_requires = >=3.7
+
+[options.packages.find]
+exclude =
+    tests*
+    testing*
 
 [options.entry_points]
 console_scripts =
@@ -31,11 +39,6 @@ console_scripts =
     all-repos-list-repos=all_repos.list_repos:main
     all-repos-manual=all_repos.manual:main
     all-repos-sed=all_repos.sed:main
-
-[options.packages.find]
-exclude =
-    tests*
-    testing*
 
 [bdist_wheel]
 universal = True
