--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,21 +4,15 @@ repos:
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
-    -   id: check-docstring-first
     -   id: check-yaml
     -   id: debug-statements
     -   id: double-quote-string-fixer
     -   id: name-tests-test
     -   id: requirements-txt-fixer
--   repo: https://github.com/PyCQA/flake8
-    rev: 4.0.1
+-   repo: https://github.com/asottile/setup-cfg-fmt
+    rev: v1.20.0
     hooks:
-    -   id: flake8
-        additional_dependencies: [flake8-typing-imports==1.12.0]
--   repo: https://github.com/pre-commit/mirrors-autopep8
-    rev: v1.6.0
-    hooks:
-    -   id: autopep8
+    -   id: setup-cfg-fmt
 -   repo: https://github.com/asottile/reorder_python_imports
     rev: v3.0.1
     hooks:
@@ -34,8 +28,16 @@ repos:
     hooks:
     -   id: pyupgrade
         args: [--py37-plus]
+-   repo: https://github.com/pre-commit/mirrors-autopep8
+    rev: v1.6.0
+    hooks:
+    -   id: autopep8
+-   repo: https://github.com/PyCQA/flake8
+    rev: 4.0.1
+    hooks:
+    -   id: flake8
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.941
+    rev: v0.942
     hooks:
     -   id: mypy
         additional_dependencies: [types-all]
