--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ classifiers =
 packages = find:
 install_requires =
     identify
+    contextlib-chdir;python_version<"3.11"
 python_requires = >=3.7
 
 [options.packages.find]
