--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,5 +15,5 @@ resources:
 jobs:
 - template: job--python-tox.yml@asottile
   parameters:
-    toxenvs: [py37, py38, py39, py310]
+    toxenvs: [py38, py39, py310]
     os: linux
