--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ classifiers =
 packages = find:
 install_requires =
     identify
+    packaging>=20.9
     contextlib-chdir;python_version<"3.11"
 python_requires = >=3.8
 
